ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ServiceName
                port:
                  number: 8080
          - path: /inc
            pathType: Prefix
            backend:
              service:
                name: web-inc
                port:
                  number: 8080
